@@ -2,6 +2,9 @@
 	* Change to version 1.1.0
 
 2012-03-20 Tsi YANG  <tsi@in-cite.net>
+	* Feature: Added categories pictos process
+
+2012-03-20 Tsi YANG  <tsi@in-cite.net>
 	* Feature: Added picto field
 	* Fix: Mistakes in css class name
 
